--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<div class="score" id="score"></div>
 	<div class="game">
 		<div class="start" id="start">Чтобы начать игру кликните сюда!</div>
-		<div class="paper" id="paper"></div>
+		<div class="paper" id="paper">
+			<div class="lines" id="lines"></div>
+		</div>
 	</div>
 	<script type="text/javascript" src="main.js"></script>
 </body>
